@@ -114,6 +114,7 @@ TESTS = \
 	t/tab.sh \
 	t/body-start.sh \
 	t/end-of-line.sh \
+	t/last-no-history.sh \
 	t/index.sh \
 	t/index-apropos.sh \
 	t/split-index.sh \
