@@ -2,3 +2,7 @@
 File: split.info,  Node: Top,  Next: Second
 
 This is the Top node of split.info, contained in 'split.info-1.
+
+* Menu:
+
+* Second::	Node contained in 'split.info-2'
